<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">小地主</string>
    <string name="action_settings">设置</string>
    <string name="hello_world">欢迎!</string>
    <string name="_keyword">关键字</string>
    <string name="_search">搜索</string>
    <string name="gpsfollow">追随</string>
    <string name="gpslocate">定位</string>
    <string name="gpsrotate">旋转</string>
    <string name="_fac_logo">logo</string>
    <string name="_name">名称：</string>
    <string name="_address">地址：</string>
    <string name="_area">面积：</string>
    <string name="_sushe_area">宿舍：</string>
    <string name="_price">价格：</string>
    <string name="_height">楼高：</string>
    <string name="_struct">结构：</string>
    <string name="_peidian">配电：</string>
    <string name="_mobile">电话：</string>
    <string name="_desc">描述：</string>
    <string name="_height_search">高级搜索</string>
    <string name="_voice_search">语音搜索</string>
    <string name="_map">地图</string>
    <string name="_list">列表</string>
    <string name="title_activity_lbsfac_list">LBSFacListActivity</string>
    <string name="_left_menu_icon">左侧菜单图标</string>
    <string name="_maptab">maptab</string>
    <string name="_listtab">listtab</string>
    <string name="dialog_title">搜fac信息提示</string>
    <string name="button_ok">确定</string>
    <string name="button_cancel">取消</string>
    <string name="_choose">选择</string>
    <string name="_region">区域：</string>
    <string name="_query">查询</string>
    <string name="_cancel">取消</string>
    <string name="_mylocation">我的位置</string>
    <string name="title_activity_fac_image_gallery">发布信息</string>
    <string name="_qq_code">qq号：</string>
    <string name="_weinxin_code">微信：</string>
    <string name="title_activity_fac_info_add">FacInfoAdd</string>
    <string name="_floor">楼层：</string>
    <string name="_add">添加</string>
    <string name="_menu"> 菜单  </string>
    <string name="_aroundsearch">周围搜索</string>
    <string name="_chooseregion">选择范围</string>
    <string name="title_activity_load"></string>
    <string name="_loading">加载中......</string>
    <string name="_edit">" 编  辑 "</string>
    <string name="_delete">" 删 除  "</string>
    <string name="_detail">详细>></string>
    <string name="_distance">距离：</string>
    <string name="_account">账号：</string>
    <string name="_password">密码：</string>
    <string name="_login">登录</string>
    <string name="_register">注册</string>
    <string name="_mmpwd">记住密码</string>
    <string name="_usernameoremail">用户名或邮箱</string>
    <string name="_passwordhint">安全密码</string>

</resources>
