<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/left_bg"
    android:id="@+id/search_dialog"
    tools:context=".SearchActivity" >

    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
        android:id="@+id/regiontext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_region" />
      <EditText
        android:id="@+id/region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8" />

   <Button
       android:id="@+id/regionbtn"
       style="@style/lightgreybtn"
       android:background="@drawable/light_green_btn"
       android:layout_width="40dp"
       android:layout_height="25dp"
       android:text="@string/_choose"
       android:onClick="chooseCondition" />

    </LinearLayout>
    
    
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
        android:id="@+id/areatext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_area" />

    <EditText
        android:id="@+id/area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8" >
    </EditText>
   <Button
        android:id="@+id/areabtn"
        style="@style/lightgreybtn"
        android:layout_width="40dp"
        android:layout_height="25dp"
        android:text="@string/_choose"
        android:onClick="chooseCondition"
       />
   </LinearLayout>


    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

    <TextView
        android:id="@+id/pricetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_price" />

    <EditText
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8" />

   <Button
        android:id="@+id/pricebtn"
        style="@style/lightgreybtn"
        android:layout_width="40dp"
        android:layout_height="25dp"
        android:text="@string/_choose"
        android:onClick="chooseCondition"
       />
    </LinearLayout>
    
     <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

    <TextView
        android:id="@+id/floortext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_height" />

    <EditText
        android:id="@+id/floor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8" />

   <Button
        android:id="@+id/floorbtn"
        style="@style/lightgreybtn"
        android:layout_width="40dp"
        android:layout_height="25dp"
        android:text="@string/_choose"
        android:onClick="chooseCondition"
       />
    </LinearLayout>
 <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
        android:id="@+id/peidiantext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_peidian" />

    <EditText
        android:id="@+id/peidian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8" />

   <Button
       android:id="@+id/peidianbtn"
        style="@style/lightgreybtn"
        android:layout_width="40dp"
        android:layout_height="25dp"
        android:text="@string/_choose"
        android:onClick="chooseCondition"
       />
	</LinearLayout>
	
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
        android:id="@+id/structtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_struct" />
    
  <EditText
        android:id="@+id/struct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8" />
   <Button
        android:id="@+id/structbtn"
        style="@style/lightgreybtn"
        android:layout_width="40dp"
        android:layout_height="25dp"
        android:text="@string/_choose"
        android:onClick="chooseCondition"
       />
    </LinearLayout>
 
 <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
        android:id="@+id/phonetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_mobile" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8" />

	</LinearLayout>
	
	

	 <RelativeLayout
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"
	     android:orientation="horizontal" >

	     <Button
	         android:id="@+id/searchBtn"
	         android:layout_width="60dp"
	         android:layout_height="30dp"
	         android:layout_alignParentLeft="true"
	         android:layout_alignParentTop="true"
	         android:layout_marginLeft="43dp"
	         android:background="@drawable/tab_top_btn_blue"
	         android:text="@string/_query"
	         android:onClick="searchBtnClickHandler"
	         android:textColor="@color/white"
	         android:textSize="14sp" />

	     <Button
	         android:id="@+id/cancelBtn"
	         android:layout_width="60dp"
	         android:layout_height="30dp"
	         android:layout_alignParentTop="true"
	         android:layout_marginLeft="32dp"
	         android:layout_toRightOf="@+id/searchBtn"
	         android:background="@drawable/tab_top_btn_blue"
	         android:text="@string/_cancel"
	         android:onClick="cancelBtnClickHandler"
	         android:textColor="@color/white"
	         android:textSize="14sp" />

	 </RelativeLayout>

</LinearLayout>
