<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:layout_marginTop="10dp"
    android:orientation="horizontal"
    android:descendantFocusability="blocksDescendants"
    android:background="@drawable/left_bg"
    >
    <!--     android:descendantFocusability="blocksDescendants" -->
   <LinearLayout 
    android:layout_width="wrap_content"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    >
    <com.loopj.android.image.SmartImageView
        android:id="@+id/facimagefirst"
        android:layout_width="63dp"
    	android:layout_height="63dp" 
        android:contentDescription="@string/_fac_logo"
        android:src="@drawable/ic_launcher" />
    </LinearLayout>
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:background="#00000000"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:id="@+id/tmplinelayout"
    >
    <!-- 地址 -->
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
       	style="@style/listViewItem"
        >

        <TextView
            android:id="@+id/nametext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_gravity="center_vertical"
            style="@style/textblock"
            android:text="@string/_name"
            />
        <TextView
            android:id="@+id/namevalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            style="@style/textblock"
             android:singleLine="false"
            android:layout_marginLeft="5dp"
            />
        
   </LinearLayout>
    <!-- 地址 -->
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
       	style="@style/listViewItem"
        >

        <TextView
            android:id="@+id/addresstext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_gravity="center_vertical"
            style="@style/textblock"
            android:text="@string/_address"
            />
        <TextView
            android:id="@+id/addressvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            style="@style/textblock"
             android:singleLine="false"
            android:layout_marginLeft="5dp"
            />
        
   </LinearLayout>
    <!-- 面积 -->
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        style="@style/listViewItem"
        >

        <TextView
            android:id="@+id/areatext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_gravity="center_vertical"
            style="@style/textblock"
            android:text="@string/_area"
            />
        <TextView
            android:id="@+id/areavalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            style="@style/textblock"
            android:layout_marginLeft="5dp"
            />
        
   </LinearLayout>
    <!-- 价格-->

   <LinearLayout
       style="@style/listViewItem"
       android:layout_width="match_parent"
       android:layout_height="35dp"
        >

        <TextView
            android:id="@+id/pricetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_gravity="center_vertical"
            style="@style/textblock"
            android:text="@string/_price"
            />
        <TextView
            android:id="@+id/pricevalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            style="@style/textblock"
            android:layout_marginLeft="5dp"
            />
        
   </LinearLayout>
    <!-- 电话 -->
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        style="@style/listViewItem"
        >

        <TextView
            android:id="@+id/phonetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_gravity="center_vertical"
            style="@style/textblock"
            android:text="@string/_mobile"
            />
        <TextView
            android:id="@+id/phonevalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            style="@style/textblock"
            android:layout_marginLeft="5dp"
            />
        
   </LinearLayout>
   
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        style="@style/listViewItem"
        >

        <TextView
            android:id="@+id/qqtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_gravity="center_vertical"
            style="@style/textblock"
            android:text="@string/_qq_code"
            />
        <TextView
            android:id="@+id/qqvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            style="@style/textblock"
            android:layout_marginLeft="5dp"
            />
        
   </LinearLayout>
   
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        style="@style/listViewItem"
        >

        <TextView
            android:id="@+id/weixintext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_gravity="center_vertical"
            style="@style/textblock"
            android:text="@string/_weinxin_code"
            />
        <TextView
            android:id="@+id/weixinvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            style="@style/textblock"
            android:layout_marginLeft="5dp"
            />
        
   </LinearLayout>
   
   <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        >
	 <TextView
            android:id="@+id/fac_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/facdetail"
            android:clickable="true"
            style="@style/listViewItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/facedit"
            android:layout_alignBottom="@+id/facedit"
            android:layout_alignParentRight="true"
            android:layout_marginRight="14dp"
            android:text="@string/_detail"
            android:textColor="#F92200"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/facedit"
            android:clickable="true"
            style="@style/listViewItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="18dp"
            android:layout_toLeftOf="@+id/facdelete"
            android:text="@string/_edit"
            android:textColor="#F92200"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/facdelete"
            android:clickable="true"
            style="@style/listViewItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:layout_toLeftOf="@+id/facdetail"
            android:text="@string/_delete"
            android:textColor="#F92200"
            android:textSize="18sp" />
        
   </RelativeLayout>
        
</LinearLayout>

</LinearLayout>